--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
+    <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1,user-scalable=no">
     <title>去中心化的职业信用联盟</title>
     <script type="text/javascript" src="/asset/js/flexible.js"></script>
     <% if (env !== 'dev') { %>
@@ -9,12 +9,12 @@
     <% } %>
   </head>
   <body>
-    <div class="main-wrap" id="top">
+    <div id="top">
       <header class="container-fluid clearfix front-header">
         <div class="row">
           <div class="col-12">
             <a href="/" class="logo" title="去中心化的职业信用联盟"></a>
-            <a href="javascript:;" class="icon-nav-btn"></a>
+            <i class="icon-nav-btn"></i>
             <ul class="nav-links">
               <li><a href="#top">首页</a></li>
               <li><a href="#ourProduct">我们的产品</a></li>
@@ -27,112 +27,114 @@
             </ul>
           </div>
         </div>
-      </header>
-      <div class="chainio clearfix row container">
-        <div class="l-p col-6 col-xs-12">
-          <h2> <span>去中心化的</span><span>职业信用联盟</span></h2>
-          <p class="secont-title">背调3.0即将到来</p>
-          <h3><span>基于区块链技术构建的职业信用联盟链</span><span>技术革新，提升雇员背景调查效率</span><span>共同努力，让中国职业信用环境更美好</span></h3>
-          <!-- <a href="javascript:;" class="btn-main join-union">加入职业信用联盟</a> -->
+      </header> 
+      <div class="main-wrap">
+        <div class="chainio clearfix row container">
+          <div class="l-p col-6 col-xs-12">
+            <h2> <span>去中心化的</span><span>职业信用联盟</span></h2>
+            <p class="secont-title">背调3.0即将到来</p>
+            <h3><span>基于区块链技术构建的职业信用联盟链</span><span>技术革新，提升雇员背景调查效率</span><span>共同努力，让中国职业信用环境更美好</span></h3>
+            <!-- <a href="javascript:;" class="btn-main join-union">加入职业信用联盟</a> -->
+          </div>
+          <div class="r-p col-6">
+            <p></p>
+          </div>
+          <i class="icon-cir icon-cir-1"></i>
+          <i class="icon-cir icon-cir-2"></i>
+          <i class="icon-cir icon-cir-3"></i>
+          <i class="icon-cir icon-cir-4"></i>
+          <i class="icon-cir icon-cir-5"></i>
+          <i class="icon-cir icon-cir-6"></i>
+          <i class="icon-cir icon-cir-7"></i>
         </div>
-        <div class="r-p col-6">
-          <p></p>
-        </div>
-        <i class="icon-cir icon-cir-1"></i>
-        <i class="icon-cir icon-cir-2"></i>
-        <i class="icon-cir icon-cir-3"></i>
-        <i class="icon-cir icon-cir-4"></i>
-        <i class="icon-cir icon-cir-5"></i>
-        <i class="icon-cir icon-cir-6"></i>
-        <i class="icon-cir icon-cir-7"></i>
-      </div>
-      <div class="our-product clearfix" id="ourProduct">
-        <h2>我们的产品</h2>
-        <div class="container">
-          <div class="content-wrap row">
-            <div class="words">
-              <p>职信联盟链中的企业记录着离职员工在本企业就职的入离职时间、职位、离职原因、是否有劳动争议、是否竞业禁止等工作履历信息，离职员工的工作履历信息可提供给联盟链中其他企业（获得员工本人授权是前提）。<br/>通过这些不可篡改的职业信息，企业可以更加全面的、真实的了解应聘候选人的过往履历，从而招到更放心的人。同时，对于求职者来说，可以获得更为公平的竞争机会。</p>
-            </div>
-            <div class="advantage">
-              <div class="adv-item pic-right clearfix row">
-                <div class="text-wrap col-8">
-                  真实可靠
-                  <p>区块链底层技术带来的信息不可篡改性</p>
-                </div>
-                <div class="icon-wrap col-3">
-                    <span class="veracity"></span>
-                </div>
+        <div class="our-product clearfix" id="ourProduct">
+          <h2>我们的产品</h2>
+          <div class="container">
+            <div class="content-wrap row">
+              <div class="words">
+                <p class="first-p">职信联盟中的企业记录着离职员工在本企业就职的入离职时间、职位、离职原因、是否有劳动争议、是否竞业禁止等工作履历信息，离职员工的工作履历信息可提供给联盟链中其他企业（获得员工本人授权是前提）。</p><p>通过这些不可篡改的职业信息，企业可以更加全面、真实地了解应聘候选人的过往履历，从而招到更放心的人。同时，对于求职者来说，可以获得更为公平的竞争机会。</p>
               </div>
-              <div class="adv-item clearfix row" style="margin: 40px 0;">
-                <div  class="text-wrap col-8">
-                  提升效率
-                  <p>通过区块链技术的去中心化特性提升效率</p>
+              <div class="advantage">
+                <div class="adv-item pic-right clearfix row">
+                  <div class="text-wrap col-8">
+                    真实可靠
+                    <p>区块链底层技术带来的信息不可篡改性</p>
+                  </div>
+                  <div class="icon-wrap col-3">
+                      <span class="veracity"></span>
+                  </div>
                 </div>
-                <div class="icon-wrap col-3">
-                    <span class="efficiency"></span>                    
+                <div class="adv-item clearfix row" style="margin: 40px 0;">
+                  <div  class="text-wrap col-8">
+                    提升效率
+                    <p>通过区块链技术的去中心化特性提升效率</p>
+                  </div>
+                  <div class="icon-wrap col-3">
+                      <span class="efficiency"></span>                    
+                  </div>
                 </div>
-              </div>
-              <div class="adv-item pic-right clearfix row">
-                <div  class="text-wrap col-8">
-                  降低成本
-                  <p>联盟链中进行互助调查极大降低成本</p>
-                </div>
-                <div class="icon-wrap col-3">
-                  <span class="cost"></span>
+                <div class="adv-item pic-right clearfix row">
+                  <div  class="text-wrap col-8">
+                    降低成本
+                    <p>联盟链中进行互助调查极大降低成本</p>
+                  </div>
+                  <div class="icon-wrap col-3">
+                    <span class="cost"></span>
+                  </div>
                 </div>
               </div>
             </div>
           </div>
+          <i class="icon-cir icon-cir-1"></i>
+          <i class="icon-cir icon-cir-2"></i>
+          <i class="icon-cir icon-cir-3"></i>
+          <i class="icon-cir icon-cir-4"></i>
+          <i class="icon-cir icon-cir-5"></i>          
         </div>
-        <i class="icon-cir icon-cir-1"></i>
-        <i class="icon-cir icon-cir-2"></i>
-        <i class="icon-cir icon-cir-3"></i>
-        <i class="icon-cir icon-cir-4"></i>
-        <i class="icon-cir icon-cir-5"></i>          
-      </div>
-      <div class="tec-process clearfix" id="tecProcess">
-        <h2>技术及流程</h2>
-        <div class="steps row">
-          <p>我们正在建立一套严谨的共识机制（基于dBFT、Raft等共识算法进行验证入链、候选人授权、投票退链等业务场景）、智能合约以及激励机制。通过公私钥的非对称加密技术，来保障链上企业间点对点数据交易的不侵犯隐私、安全和真实性。</p>
-          <!-- <p>1.需求方发起背调</p> -->
-          <!-- <p>2.求职者本人授权</p>
-          <p>3.通过区块链的技术传播至供给方</p>
-          <p>4.供给方接受信息，完成履历验证</p>
-          <p>5.返回结果至需求方</p> -->
+        <div class="tec-process clearfix" id="tecProcess">
+          <h2>技术及流程</h2>
+          <div class="steps row">
+            <p>我们正在建立一套严谨的共识机制（基于dBFT、Raft等共识算法进行验证入链、候选人授权、投票退链等业务场景）、智能合约以及激励机制。通过公私钥的非对称加密技术，来保障链上企业间点对点数据交易的不侵犯隐私、安全和真实性。</p>
+            <!-- <p>1.需求方发起背调</p> -->
+            <!-- <p>2.求职者本人授权</p>
+            <p>3.通过区块链的技术传播至供给方</p>
+            <p>4.供给方接受信息，完成履历验证</p>
+            <p>5.返回结果至需求方</p> -->
+          </div>
+          <p class="process-pic"></p>
         </div>
-        <p class="process-pic"></p>
-      </div>
-      <div class="about-us clearfix" id="aboutUs">
-        <h2>关于我们</h2>
-        <div class="content">我们有一支区块链方面的技术专家及顾问团队<br />核心团队来自阿里巴巴、华为、恒生电子、浙大网新等知名公司<br />我们有职业信用领域方面的丰富经验<br />运作有近十万人的企业HR互助联盟<br />运营有已服务于数千家企业的互联网背景调查公司（i背调）<br />我们是区块链技术应用于职业信用场景的先行者和最佳实践者</div>
-      </div>
-      <div class="roadmap clearfix" id="roadmap">
-        <h2>路线图</h2>
-        <div class="line">
-          <div class="map container row">
-            <div class="map-item m1 up col-3 col-xs-12"><p><span class="title">Q4 2017 - Q1 2018</span><br />完成职信联盟及其交易模型<br />实现职信联盟链V1.0上链</p></div>
-            <div class="map-item m2 down col-3 col-xs-12"><p><span class="title">Q2 - Q4, 2018</span><br />推出基于智能合约的应用<br />5000家企业加入联盟链</p></div>
-            <div class="map-item m3 up col-3 col-xs-12"><p><span class="title">2019</span><br />100000家企业上链<br />持续完善联盟链功能</p></div>
-            <div class="map-item m4 down col-3 col-xs-12"><p><span class="title">2020</span><br />100万家企业上链<br />拓展基于职业信用的其他关联服务</p></div>
+        <div class="about-us clearfix" id="aboutUs">
+          <h2>关于我们</h2>
+          <div class="content">我们有一支区块链方面的技术专家及顾问团队<br />核心团队来自阿里巴巴、华为、恒生电子、浙大网新等知名公司<br />我们有职业信用领域方面的丰富经验<br />运作有近十万人的企业HR互助联盟<br />运营有已服务于数千家企业的互联网背景调查公司（i背调）<br />我们是区块链技术应用于职业信用场景的先行者和最佳实践者</div>
+        </div>
+        <div class="roadmap clearfix" id="roadmap">
+          <h2>路线图</h2>
+          <div class="line">
+            <div class="map container row">
+              <div class="map-item m1 up col-3 col-xs-12"><p><span class="title">Q4 2017 - Q1 2018</span><br />完成职信联盟及其交易模型<br />实现职信联盟链V1.0上链</p></div>
+              <div class="map-item m2 down col-3 col-xs-12"><p><span class="title">Q2 - Q4, 2018</span><br />推出基于智能合约的应用<br />5000家企业加入联盟链</p></div>
+              <div class="map-item m3 up col-3 col-xs-12"><p><span class="title">2019</span><br />100000家企业上链<br />持续完善联盟链功能</p></div>
+              <div class="map-item m4 down col-3 col-xs-12"><p><span class="title">2020</span><br />100万家企业上链<br />拓展基于职业信用的其他关联服务</p></div>
+            </div>
+          </div>
+        </div>
+        <div class="co clearfix" id="co">
+          <h2>投资机构与合作伙伴</h2>
+          <div class="logos container">
+            <div class="logo-item"><p class="frees"></p></div>
+            <div class="logo-item"><p class="xinghe"></p></div>
+            <div class="logo-item"><p class="lvchengzhongguo"></p></div>
+            <div class="logo-item"><p class="hailiang"></p></div>
+            <div class="logo-item"><p class="okcoin"></p></div>
+            <div class="logo-item"><p class="jinzhouyinhang"></p></div>
+            <div class="logo-item"><p class="yangguangbaoxian"></p></div>
+            <div class="logo-item"><p class="kuaishou"></p></div>
+            <div class="logo-item"><p class="paipaidai"></p></div>
+            <div class="logo-item"><p class="liepin"></p></div>
           </div>
         </div>
       </div>
-      <div class="co clearfix" id="co">
-        <h2>投资机构与合作伙伴</h2>
-        <div class="logos container">
-          <div class="logo-item"><p class="frees"></p></div>
-          <div class="logo-item"><p class="xinghe"></p></div>
-          <div class="logo-item"><p class="lvchengzhongguo"></p></div>
-          <div class="logo-item"><p class="hailiang"></p></div>
-          <div class="logo-item"><p class="okcoin"></p></div>
-          <div class="logo-item"><p class="jinzhouyinhang"></p></div>
-          <div class="logo-item"><p class="yangguangbaoxian"></p></div>
-          <div class="logo-item"><p class="kuaishou"></p></div>
-          <div class="logo-item"><p class="paipaidai"></p></div>
-          <div class="logo-item"><p class="liepin"></p></div>
-        </div>
-      </div>
-      <footer>
+      <footer class="front-footer">
         <div class="logo-row">
           <div class="container clearfix">
             <div class="row">
