--- a/public/src/less/common/header-front.less
+++ b/public/src/less/common/header-front.less
@@ -1,22 +1,18 @@
 #transition {
-  -webkit-transition: all .4s cubic-bezier(0.4, 0, 0.2, 1);
-  -moz-transition: all .4s cubic-bezier(0.4, 0, 0.2, 1);
-  -ms-transition: all .4s cubic-bezier(0.4, 0, 0.2, 1);
-  -o-transition: all .4s cubic-bezier(0.4, 0, 0.2, 1);
-  transition: all .4s cubic-bezier(0.4, 0, 0.2, 1);
+  -webkit-transition: all .2s cubic-bezier(0.4, 0, 0.2, 1);
+  -moz-transition: all .2s cubic-bezier(0.4, 0, 0.2, 1);
+  -ms-transition: all .2s cubic-bezier(0.4, 0, 0.2, 1);
+  -o-transition: all .2s cubic-bezier(0.4, 0, 0.2, 1);
+  transition: all .2s cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 header.front-header {
   #transition;
   width: 100%;
-  // padding-left: 2%;
-  // padding-right: 2%;
   padding: 12px 2%;
   position: fixed;
   top: 0;
   left: 0;
-  -webkit-transition: all .25s;
-  transition: all .25s;
   background: rgba(0,0,0,0);
   z-index: 99;
   &.slide-left {
@@ -27,9 +23,6 @@ header.front-header {
   &.header-scroll {
     background: rgba(255, 255, 255, 1);
     box-shadow: 0px 1px 6px #ddd;
-    // .nav-links li a {
-    //   color: #fff;
-    // }
   }
 	.logo {
 		float: left;
@@ -82,6 +75,15 @@ header.front-header {
   header.front-header {
     width: 100%;
     padding: 27rem * @s 50rem * @s;
+    &.slide-left {
+      -webkit-transform: translate(-66.67%, 0);
+      -ms-transform: translate(-66.67%, 0);
+      -o-transform: translate(-66.67%, 0);
+      transform: translate(-66.67%, 0);
+      .icon-nav-btn {
+          opacity: 0;
+      }
+    }
     .logo {
       float: left;
       width: 174 * @s;
@@ -144,8 +146,8 @@ header.front-header {
         display: none;
     }
     .content {
-        #transition;
-        display: none;        
+      #transition;    
+        // display: none;
         position: absolute;
         top: 0;
         right: 0;
@@ -153,19 +155,21 @@ header.front-header {
         width: 66.667%;
         background: #fff;
         z-index: 99;
-        -webkit-transform: translate(100%, 0);
-        -ms-transform: translate(100%, 0);
-        -o-transform: translate(100%, 0);
-        transform: translate(100%, 0);
+        opacity: 1;
+        -webkit-transform: translate(750px, 0);
+        -ms-transform: translate(750px, 0);
+        -o-transform: translate(750px, 0);
+        transform: translate(750px, 0);
         -moz-box-shadow: inset 0.125em 0 0.25em #d8dde8;
         -webkit-box-shadow: inset 0.125em 0 0.25em #d8dde8;
         box-shadow: inset 0.125em 0 0.25em #d8dde8;
         &.content-show {
-            -webkit-transform: translate(0, 0);
-            -moz-transform: translate(0, 0);
-            -ms-transform: translate(0, 0);
-            -o-transform: translate(0, 0);
-            transform: translate(0, 0);
+          -webkit-transform: translate(0, 0);
+          -moz-transform: translate(0, 0);
+          -ms-transform: translate(0, 0);
+          -o-transform: translate(0, 0);
+          transform: translate(0, 0);
+          opacity: 1;
         }
         .btn-close {
             font-size: 28rem * @s;
@@ -200,6 +204,15 @@ header.front-header {
   header.front-header {
     width: 100%;
     padding: 27rem * @s 50rem * @s;
+    &.slide-left {
+      -webkit-transform: translate(-66.67%, 0);
+      -ms-transform: translate(-66.67%, 0);
+      -o-transform: translate(-66.67%, 0);
+      transform: translate(-66.67%, 0);
+      .icon-nav-btn {
+          opacity: 0;
+      }
+    }
     .logo {
       float: left;
       width: 174 * @s;
@@ -262,8 +275,8 @@ header.front-header {
         display: none;
     }
     .content {
-        #transition;
-        display: none;
+      #transition;    
+        // display: none;
         position: absolute;
         top: 0;
         right: 0;
@@ -271,19 +284,21 @@ header.front-header {
         width: 66.667%;
         background: #fff;
         z-index: 99;
-        -webkit-transform: translate(100%, 0);
-        -ms-transform: translate(100%, 0);
-        -o-transform: translate(100%, 0);
-        transform: translate(100%, 0);
+        opacity: 1;
+        -webkit-transform: translate(750px, 0);
+        -ms-transform: translate(750px, 0);
+        -o-transform: translate(750px, 0);
+        transform: translate(750px, 0);
         -moz-box-shadow: inset 0.125em 0 0.25em #d8dde8;
         -webkit-box-shadow: inset 0.125em 0 0.25em #d8dde8;
         box-shadow: inset 0.125em 0 0.25em #d8dde8;
         &.content-show {
-            -webkit-transform: translate(0, 0);
-            -moz-transform: translate(0, 0);
-            -ms-transform: translate(0, 0);
-            -o-transform: translate(0, 0);
-            transform: translate(0, 0);
+          -webkit-transform: translate(0, 0);
+          -moz-transform: translate(0, 0);
+          -ms-transform: translate(0, 0);
+          -o-transform: translate(0, 0);
+          transform: translate(0, 0);
+          opacity: 1;
         }
         .btn-close {
             font-size: 28rem * @s;
@@ -318,6 +333,15 @@ header.front-header {
   header.front-header {
     width: 100%;
     padding: 27rem * @s 50rem * @s;
+    &.slide-left {
+      -webkit-transform: translate(-66.67%, 0);
+      -ms-transform: translate(-66.67%, 0);
+      -o-transform: translate(-66.67%, 0);
+      transform: translate(-66.67%, 0);
+      .icon-nav-btn {
+          opacity: 0;
+      }
+    }
     .logo {
       float: left;
       width: 174 * @s;
@@ -380,8 +404,8 @@ header.front-header {
         display: none;
     }
     .content {
-        #transition;
-        display: none;
+      #transition;    
+        // display: none;
         position: absolute;
         top: 0;
         right: 0;
@@ -389,19 +413,21 @@ header.front-header {
         width: 66.667%;
         background: #fff;
         z-index: 99;
-        -webkit-transform: translate(100%, 0);
-        -ms-transform: translate(100%, 0);
-        -o-transform: translate(100%, 0);
-        transform: translate(100%, 0);
+        opacity: 1;
+        -webkit-transform: translate(750px, 0);
+        -ms-transform: translate(750px, 0);
+        -o-transform: translate(750px, 0);
+        transform: translate(750px, 0);
         -moz-box-shadow: inset 0.125em 0 0.25em #d8dde8;
         -webkit-box-shadow: inset 0.125em 0 0.25em #d8dde8;
         box-shadow: inset 0.125em 0 0.25em #d8dde8;
         &.content-show {
-            -webkit-transform: translate(0, 0);
-            -moz-transform: translate(0, 0);
-            -ms-transform: translate(0, 0);
-            -o-transform: translate(0, 0);
-            transform: translate(0, 0);
+          -webkit-transform: translate(0, 0);
+          -moz-transform: translate(0, 0);
+          -ms-transform: translate(0, 0);
+          -o-transform: translate(0, 0);
+          transform: translate(0, 0);
+          opacity: 1;
         }
         .btn-close {
             font-size: 28rem * @s;
@@ -425,21 +451,6 @@ header.front-header {
                     display: block;
                     color: #81868b;
                 }
-                // .btn-login {
-                //     letter-spacing: 4rem * @s;
-                //     margin-right: 10rem * @s;
-                //     #btns > .btn-default(@scale: @s, @height: 72rem, @fs: 28rem, @br: 4rem, @color: @b-blur);
-                // }
-                // .btn-bd {
-                //   letter-spacing: 4rem * @s;
-                //   margin-right: 10rem * @s;
-                //   #btns > .btn-primary(@scale: @s, @height: 72rem, @fs: 28rem, @br: 4rem, @pd: 20rem, @bg: #F34F3E);
-                // }
-                // .btn-register,
-                // .btn-my {
-                //     letter-spacing: 4rem * @s;
-                //     #btns > .btn-primary(@scale: @s, @height: 72rem, @fs: 28rem, @br: 4rem, @pd: 20rem);
-                // }
             }
         }
     }
