--- a/public/src/less/index.less
+++ b/public/src/less/index.less
@@ -141,7 +141,10 @@ body {
 		padding: 84px 65px 0;
 		color: #fff;
 		background-color: #40B8B4;
-		font-size: 24px;
+    font-size: 24px;
+    .first-p {
+      margin-bottom: 10px;
+    }
 		p {
 			font-size: 16px;
 			line-height: 36px;
