--- a/public/src/less/index/index-phone.less
+++ b/public/src/less/index/index-phone.less
@@ -22,13 +22,13 @@ body {
       }
     }
     .secont-title {
-      font-size: 32 * @s;
-      margin-bottom: 80 * @s;
+      font-size: 36 * @s;
+      margin-bottom: 120 * @s;
     }
 		h3 {
-			font-size: 26 * @s;
-			line-height: 42 * @s;
-      margin-bottom: 120 * @s;
+			font-size: 30 * @s;
+			line-height: 60 * @s;
+      margin-bottom: 80 * @s;
 		}
 		.join-union {
 			width: 84%;
@@ -71,7 +71,7 @@ body {
       width: 14 * @s;
       height: 14 * @s;
       bottom: 238 * @s;
-      left: 45%;
+      left: 15%;
     }
     &.icon-cir-6 {
       width: 24 * @s;
@@ -87,7 +87,7 @@ body {
 }
 
 .our-product {
-  padding: 74 * @s 8% 194 * @s;
+  padding: 74 * @s 8% 105 * @s;
   width: 100%;
   margin: auto;
 	h2 {
@@ -102,14 +102,17 @@ body {
 	.words {
     flex: 0 0 100%;
     max-width: 100%;
-		margin-bottom: 60 * @s;
+		margin-bottom: 100 * @s;
 		color: #34495C;
 		background: none;
     font-size: 24 * @s;
     padding: 0;
-    text-align: center;
+    text-align: left;
+    .first-p {
+      margin-bottom: 20 * @s;
+    }
 		p {
-			font-size: 20 * @s;
+			font-size: 26 * @s;
 			line-height: 56 * @s;
 		}
 	}
@@ -122,10 +125,10 @@ body {
 			.text-wrap {
 				width: 456 * @s;
 				padding-bottom: 32 * @s;
-				font-size: 30 * @s;
+				font-size: 36 * @s;
 				p {
 					margin: 26 * @s auto auto;
-					font-size: 24 * @s;
+					font-size: 26 * @s;
 				}
 			}
 			.icon-wrap,span {
@@ -162,10 +165,10 @@ body {
     line-height: 30 * @s;
 		p {
       display: block;
-      text-align: center;
+      text-align: left;
       margin: auto;
-      font-size: 20 * @s;      
-      line-height: 36 * @s;  
+      font-size: 26 * @s;      
+      line-height: 56 * @s;  
       padding: 0 8%;    
 		}
 	}
@@ -184,8 +187,8 @@ body {
 		font-size: 40 * @s;
 	}
 	.content {
-		font-size: 20 * @s;
-		line-height: 40 * @s;
+		font-size: 26 * @s;
+		line-height: 56 * @s;
 	}
 }
 
