--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,6 +2,8 @@
 <html>
   <head>
     <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1,user-scalable=no">
+    <meta name="description" content="去中心化的职业信用联盟，基于区块链技术构建的职业信用联盟链，提升雇员背景调查效率，让中国职业信用环境更美好。">
+    <meta name="keywords" content="职信联盟,职业信用联盟,职业信用联盟链">
     <title>去中心化的职业信用联盟</title>
     <script type="text/javascript" src="/asset/js/flexible.js"></script>
     <% if (env !== 'dev') { %>
