--- a/public/src/less/common/footer-front.less
+++ b/public/src/less/common/footer-front.less
@@ -6,7 +6,7 @@
   transition: all .2s cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-footer {
+footer.front-footer {
   #transition;
   background-color: #273237;
   #transition;
@@ -49,7 +49,7 @@ footer {
 @media only screen and (min-width: 414px) and (max-width: 880px) and (min-device-width: 768px) {
   @s: 1/100rem;
   @d: 0rem;
-  footer {
+  footer.front-footer {
     .logo-row {
       padding: 56 * @s 0 96 * @s;
       .logo {
@@ -87,7 +87,7 @@ footer {
 @media only screen and (max-width: 414px) {
   @s: 1/75rem;
   @d: 0rem;
-  footer {
+  footer.front-footer {
     .logo-row {
       padding: 56 * @s 0 96 * @s;
       .logo {
@@ -125,7 +125,7 @@ footer {
 @media only screen and (max-device-width: 768px) {
   @s: 1/75rem;
   @d: 0rem;
-  footer {
+  footer.front-footer {
     .logo-row {
       padding: 56 * @s 0 96 * @s;
       .logo {
