--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,33 +1,15 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1,user-scalable=no">
+    <%- include('common/head.ejs') %>
     <title>去中心化的职业信用联盟</title>
-    <script type="text/javascript" src="/asset/js/flexible.js"></script>
     <% if (env !== 'dev') { %>
       <link rel="stylesheet" type="text/css" charset="utf-8" href="/dist/css/index.css?v=<%= ts %>">
     <% } %>
   </head>
   <body>
-    <div id="top">
-      <header class="container-fluid clearfix front-header">
-        <div class="row">
-          <div class="col-12">
-            <a href="/" class="logo" title="去中心化的职业信用联盟"></a>
-            <i class="icon-nav-btn"></i>
-            <ul class="nav-links">
-              <li><a href="#top">首页</a></li>
-              <li><a href="#ourProduct">我们的产品</a></li>
-              <li><a href="#tecProcess">技术及流程</a></li>
-              <li><a href="#aboutUs">关于我们</a></li>
-              <li><a href="#roadmap">线路图</a></li>
-              <li><a href="#co">合作伙伴</a></li>
-              <!-- <li><a href="#" class="btn-rl btn-gray btn-register">注册</a></li> -->
-              <!-- <li><a href="#" class="btn-rl btn-main btn-login">登录</a></li> -->
-            </ul>
-          </div>
-        </div>
-      </header> 
+    <div class="page-wrap" id="top">
+      <%- include('common/front-header.ejs') %>
       <div class="main-wrap">
         <div class="chainio clearfix row container">
           <div class="l-p col-6 col-xs-12">
@@ -134,52 +116,9 @@
           </div>
         </div>
       </div>
-      <footer class="front-footer">
-        <div class="logo-row">
-          <div class="container clearfix">
-            <div class="row">
-              <div class="col-2 col-xs-12">
-                <a href="/" class="logo" title="去中心化的职业信用联盟"></a>
-              </div>
-              <div class="col-10 col-xs-12">
-                <ul class="nav-links">
-                  <li><a href="#ourProduct">我们的产品</a></li>
-                  <li><a href="#tecProcess">技术及流程</a></li>
-                  <li><a href="#aboutUs">关于我们</a></li>
-                  <li><a href="#roadmap">线路图</a></li>
-                  <li><a href="#co">合作伙伴</a></li>
-                </ul>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="copyright-row">
-          <div class="container clearfix">
-            <div class="row">
-              <div class="col-md-12">
-                <p class="text">Copyright © 2018 杭州有才信息技术有限公司. All Rights Reserved.</p>
-              </div>
-            </div>
-          </div>
-        </div>
-      </footer>
+      <%- include('common/front-footer.ejs') %>      
     </div>
-    <div class="nav-mobile">
-        <div class="shadow"></div>
-        <div class="content">
-            <a href="javascript:;" class="btn-close">X 关闭</a>
-            <ul class="nav-links">
-                <li><a href="#top">首页</a></li>
-                <li><a href="#ourProduct">我们的产品</a></li>
-                <li><a href="#tecProcess">技术及流程</a></li>
-                <li><a href="#aboutUs">关于我们</a></li>
-                <li><a href="#roadmap">区块链图</a></li>
-                <li class="last"><a href="#co">合作伙伴</a></li>                
-                <li class="last">
-                </li>
-            </ul>
-        </div>
-    </div>
+    <%- include('common/nav-mobile.ejs') %>
     <script type="text/javascript" src="/dist/index.js?v=<%= ts %>"></script>
   </body>
 </html>
