--- a/public/src/less/common/base.less
+++ b/public/src/less/common/base.less
@@ -61,6 +61,13 @@ input,img{
   display: block;
   clear: both;
   content: "";
+  font-size: 0;
+  height: 0;
+}
+
+body,html {
+  width: 100%;
+  height: 100%;
 }
 
 a {
