--- a/public/src/less/login.less
+++ b/public/src/less/login.less
@@ -1,10 +1,60 @@
 @import './common/base.less';
 
+.icon-cir {
+  display: block;
+  position: absolute;
+  background-size: contain!important;
+}
+
 .page-wrap {
   width: 100%;
   height: 100%;
   background: #fff;
   padding-top: 144px;
+  .icon-cir {
+    &.icon-cir-1 {
+      width: 15px;
+      height: 14px;
+      background: url(../images/cir9.png) no-repeat center;
+      top: 198px;
+      right: 32%;
+    }
+    &.icon-cir-2 {
+      width: 17px;
+      height: 17px;
+      background: url(../images/fang1.png) no-repeat center;
+      top: 357px;
+      right: 26%;
+    }
+    &.icon-cir-3 {
+      width: 60px;
+      height: 34px;
+      background: url(../images/cir2.png) no-repeat center;
+      top: 375px;
+      left: 50%;
+    }
+    &.icon-cir-4 {
+      width: 7px;
+      height: 7px;
+      background: url(../images/cir4.png) no-repeat center;
+      top: 270px;
+      left: 28%;
+    }
+    &.icon-cir-5 {
+      width: 8px;
+      height: 8px;
+      background: url(../images/cir5.png) no-repeat center;
+      top: 482px;
+      left: 32%;
+    }
+    &.icon-cir-6 {
+      width: 14px;
+      height: 14px;
+      background: url(../images/fang2.png) no-repeat center;
+      top: 530px;
+      left: 20%;
+    }
+  }
   .main-wrap {
     width: 100%;
     max-width: 376px;
