--- a/views/common/my/leftNav.ejs
+++ b/views/common/my/leftNav.ejs
@@ -10,7 +10,7 @@
       <dl>
         <dt><i class="chainio-icon-mokuai iconfont"></i>联盟背调</dt>
         <dd><a href="#">发起背调</a></dd>
-        <dd><a href="#">收到背调</a></dd>
+        <dd><a href="#">收到背调</a><i class="point">3</i></dd>
         <dd><a href="#">背调记录</a></dd>
         <dd><a href="#">背调积分</a></dd>
       </dl>
