--- a/views/login.ejs
+++ b/views/login.ejs
@@ -23,6 +23,12 @@
             Copyright © 2018 杭州有才信息技术有限公司. All Rights Reserved.
         </div>
       </div>
+      <i class="icon-cir icon-cir-1"></i>
+      <i class="icon-cir icon-cir-2"></i>
+      <i class="icon-cir icon-cir-3"></i>
+      <i class="icon-cir icon-cir-4"></i>
+      <i class="icon-cir icon-cir-5"></i>
+      <i class="icon-cir icon-cir-6"></i>
     </div>
     <script type="text/javascript" src="/dist/login.js?v=<%= ts %>"></script>
   </body>
