--- a/views/my/info.ejs
+++ b/views/my/info.ejs
@@ -32,7 +32,10 @@
           </div>
           <div class="text-wrap">
               <label for="" class="text-lab">私钥</label>
-              <p class="text-p">sdfasdfasdfasdfasfdasddfasdf</p>
+              <p class="text-p text-self-password">
+                  <input type="password" readonly value="sdfasdfasdfasdfasfdasddfasdf" />
+                  <a href="javascript:;" class="btn-eye chainio-icon-eye-off iconfont"></a>
+              </p>
           </div>
         </form>
       </div>
