--- a/public/src/less/my/info.less
+++ b/public/src/less/my/info.less
@@ -27,11 +27,32 @@ body,html {
       position: relative;
       padding: 0 0 0 132px;
       .text-p {
+        display: block;
+        width: 100%;
         line-height: 16px;
         font-size: 14px;
         color: #6a6a6a;
         padding: 30px 0;
         border-bottom: 1px solid #E4E4E4;
+        input {
+          width: 100%;
+          font-size: 14px;
+          color: #6a6a6a;
+        }
+        &.text-self-password {
+          position: relative;
+          padding-right: 38px;
+          .btn-eye {
+            position: absolute;
+            right: 0;
+            top: 0;
+            display: block;
+            width: 38px;
+            font-size: 16px;
+            line-height: 77px;
+            text-align: center;
+          }
+        }
       }
       .text-lab {
         position: absolute;
