--- a/public/src/less/login.less
+++ b/public/src/less/login.less
@@ -93,7 +93,7 @@
         border-radius: 4px;
         padding-right: 38px;
         margin: 60px auto 18px;
-        .self-password {
+        .private-key {
           width: 100%;
           height: 100%;
           border: none;
