--- a/views/common/front-header.ejs
+++ b/views/common/front-header.ejs
@@ -11,7 +11,7 @@
           <li><a href="#roadmap">线路图</a></li>
           <li><a href="#co">合作伙伴</a></li>
           <!-- <li><a href="#" class="btn-rl btn-gray btn-register">注册</a></li> -->
-          <!-- <li><a href="#" class="btn-rl btn-main btn-login">登录</a></li> -->
+          <li><a href="/login" class="btn-rl btn-main btn-login">登录</a></li>
         </ul>
       </div>
     </div>
