--- a/views/login.ejs
+++ b/views/login.ejs
@@ -2,19 +2,20 @@
 <html>
   <head>
       <%- include('common/head.ejs') %>
-      <title>去中心化的职业信用联盟</title>
+      <title><%= title %>去中心化的职业信用联盟</title>
       <% if (env !== 'dev') { %>
         <link rel="stylesheet" type="text/css" charset="utf-8" href="/dist/css/login.css?v=<%= ts %>">
       <% } %>
   </head>
   <body>
+  <input type="hidden" id="returnUrl" name="returnUrl" value="<%= returnUrl %>" />
     <div class="page-wrap">
       <div class="main-wrap">
         <div class="top-wrap">
           <h3 class="main-title">欢迎进入</h3>
-          <i class="logo"></i>
+          <a href="/" class="logo"></a>
           <p class="input-wrap">
-              <input type="password" class="self-password" placeholder="请在此输入您的私钥" />
+              <input type="password" class="private-key" placeholder="请在此输入您的私钥" />
               <a href="javascript:;" class="btn-eye chainio-icon-eye-off iconfont"></a>
           </p>
           <a href="javascript:;" class="btn-login">导入</a>
