--- a/views/my/info.ejs
+++ b/views/my/info.ejs
@@ -16,7 +16,7 @@
         <form action="">
           <div class="text-wrap">
             <label for="" class="text-lab">账号名</label>
-            <p class="text-p">ibeidiao_hugh</p>
+            <p class="text-p">ibeidiao</p>
           </div>
           <div class="text-wrap">
               <label for="" class="text-lab">公司名称</label>
@@ -28,12 +28,12 @@
           </div>
           <div class="text-wrap">
               <label for="" class="text-lab">邮箱</label>
-              <p class="text-p">ibeidiao_hugh@233.com</p>
+              <p class="text-p">info@ibeidiao.com</p>
           </div>
           <div class="text-wrap">
               <label for="" class="text-lab">私钥</label>
               <p class="text-p text-self-password">
-                  <input type="password" readonly value="sdfasdfasdfasdfasfdasddfasdf" />
+                  <input type="password" readonly value="5Jvqsujc5BWfLv7wWJAYDeyA2ShCutCrEm5jarx8GsZQkDjw8Gh" />
                   <a href="javascript:;" class="btn-eye chainio-icon-eye-off iconfont"></a>
               </p>
           </div>
