--- a/views/common/nav-mobile.ejs
+++ b/views/common/nav-mobile.ejs
@@ -9,7 +9,9 @@
         <li><a href="#aboutUs">关于我们</a></li>
         <li><a href="#roadmap">区块链图</a></li>
         <li class="last"><a href="#co">合作伙伴</a></li>                
-        <li class="last"></li>
+        <li class="last">
+          
+        </li>
     </ul>
   </div>
 </div>
