--- a/public/src/less/common/header-front.less
+++ b/public/src/less/common/header-front.less
@@ -190,8 +190,16 @@ header.front-header {
                     border: none;
                 }
                 a {
-                    display: block;
-                    color: #81868b;
+                  display: block;
+                  color: #81868b;
+                  &.btn-login {
+                    width: 66px;
+                    height: 32px;
+                    margin-top: 5px;
+                    line-height: 32px;
+                    color: #fff;
+                    font-size: 28rem * @s;
+                  }
                 }
             }
         }
@@ -319,8 +327,16 @@ header.front-header {
                     border: none;
                 }
                 a {
-                    display: block;
-                    color: #81868b;
+                  display: block;
+                  color: #81868b;
+                  &.btn-login {
+                    width: 66px;
+                    height: 32px;
+                    margin-top: 5px;
+                    line-height: 32px;
+                    color: #fff;
+                    font-size: 28rem * @s;
+                  }
                 }
             }
         }
@@ -448,8 +464,16 @@ header.front-header {
                     border: none;
                 }
                 a {
-                    display: block;
-                    color: #81868b;
+                  display: block;
+                  color: #81868b;
+                  &.btn-login {
+                    width: 66px;
+                    height: 32px;
+                    margin-top: 5px;
+                    line-height: 32px;
+                    color: #fff;
+                    font-size: 28rem * @s;
+                  }
                 }
             }
         }
