--- a/public/src/less/common/my-common.less
+++ b/public/src/less/common/my-common.less
@@ -6,6 +6,7 @@
   padding: 12px 2%;
   background: #fff;
   box-shadow: 0px 1px 6px #ddd;
+  z-index: 11;
   .logo {
 		float: left;
 		width: 174px;
@@ -62,6 +63,7 @@
   left: 0;
   width: 293px;
   background: inherit;
+  z-index: 10;
   .list-wrap {
     width: 124px;
     margin: auto;
