--- a/public/src/less/my/info.less
+++ b/public/src/less/my/info.less
@@ -15,7 +15,7 @@ body,html {
     width: 100%;
     min-height: 500px;
     background: #fff;
-    box-shadow: 0px 1px 6px #ddd;
+    box-shadow: 0px 2px 4px 0px rgba(201, 201, 201, 0.2);
     padding: 35px 106px 80px 47px;
     margin-bottom: 100px;
     .main-title {
