--- a/views/login.ejs
+++ b/views/login.ejs
@@ -2,7 +2,7 @@
 <html>
   <head>
       <%- include('common/head.ejs') %>
-      <title><%= title %>去中心化的职业信用联盟</title>
+      <title><%= title %>职业信用联盟</title>
       <% if (env !== 'dev') { %>
         <link rel="stylesheet" type="text/css" charset="utf-8" href="/dist/css/login.css?v=<%= ts %>">
       <% } %>
@@ -15,7 +15,7 @@
           <h3 class="main-title">欢迎进入</h3>
           <a href="/" class="logo"></a>
           <p class="input-wrap">
-              <input type="password" class="private-key" placeholder="请在此输入您的私钥" />
+              <input type="password" class="private-key" placeholder="请在此输入您的私钥" value="5Jvqsujc5BWfLv7wWJAYDeyA2ShCutCrEm5jarx8GsZQkDjw8Gh" />
               <a href="javascript:;" class="btn-eye chainio-icon-eye-off iconfont"></a>
           </p>
           <a href="javascript:;" class="btn-login">导入</a>
