--- a/views/my/info.ejs
+++ b/views/my/info.ejs
@@ -2,7 +2,7 @@
 <html>
   <head>
     <%- include('../common/head.ejs') %>
-    <title>去中心化的职业信用联盟</title>
+    <title><%= title %>职业信用联盟</title>
     <% if (env !== 'dev') { %>
       <link rel="stylesheet" type="text/css" charset="utf-8" href="/dist/css/my/info.css?v=<%= ts %>">
     <% } %>
