--- a/public/src/less/index.less
+++ b/public/src/less/index.less
@@ -423,6 +423,9 @@ body {
 				&.okcoin {
 					background-image: url(../images/logos/okcoin.png);
 				}
+				&.gxb {
+					background-image: url(../images/logos/gxb.png);
+				}
 			}
 		}
 	}
