--- a/views/index.ejs
+++ b/views/index.ejs
@@ -106,7 +106,7 @@
             <div class="logo-item"><p class="frees"></p></div>
             <div class="logo-item"><p class="xinghe"></p></div>
             <div class="logo-item"><p class="lvchengzhongguo"></p></div>
-            <div class="logo-item"><p class="hailiang"></p></div>
+            <div class="logo-item"><p class="gxb"></p></div>
             <div class="logo-item"><p class="okcoin"></p></div>
             <div class="logo-item"><p class="jinzhouyinhang"></p></div>
             <div class="logo-item"><p class="yangguangbaoxian"></p></div>
