--- a/views/common/front-header.ejs
+++ b/views/common/front-header.ejs
@@ -10,8 +10,8 @@
           <li><a href="#aboutUs">关于我们</a></li>
           <li><a href="#roadmap">线路图</a></li>
           <li><a href="#co">合作伙伴</a></li>
-          <!-- <li><a href="#" class="btn-rl btn-gray btn-register">注册</a></li> -->
-          <li><a href="/login" class="btn-rl btn-main btn-login">登录</a></li>
+          <!-- <li><a href="#" class="btn-rl btn-gray btn-register">注册</a></li>
+          <li><a href="/login" class="btn-rl btn-main btn-login">登录</a></li> -->
         </ul>
       </div>
     </div>
