--- a/public/src/less/common/my-common.less
+++ b/public/src/less/common/my-common.less
@@ -91,6 +91,9 @@
           text-align: center;
           color: #34495c;
         }
+        a {
+          display: block;
+        }
       }
       dd {
         display: block;
