--- a/views/common/my/header.ejs
+++ b/views/common/my/header.ejs
@@ -1,5 +1,5 @@
 <header class="my-header clearfix">
-  <a href="#" class="logo"></a>
+  <a href="/" class="logo"></a>
   <div class="user-info">
     <div class="top clearfix">
       <img class="user-head" src="" alt="" />
