--- a/views/common/my/leftNav.ejs
+++ b/views/common/my/leftNav.ejs
@@ -2,23 +2,22 @@
   <ul class="list-wrap">
     <li class="items-wrap">
       <dl>
-          <dt><i class="chainio-icon-trumpet iconfont"></i>联盟概况</dt>
-          <dd class="<% if(page === 'info') { %>active<% } %>"><a href="/my/info">账号信息</a></dd>
+          <dt><a href="/my/index"><i class="chainio-icon-trumpet iconfont"></i>联盟概况</a></dt>
         </dl>
     </li>
     <li class="items-wrap">
       <dl>
         <dt><i class="chainio-icon-mokuai iconfont"></i>联盟背调</dt>
-        <dd><a href="#">发起背调</a></dd>
-        <dd><a href="#">收到背调</a><i class="point">3</i></dd>
+        <dd class="<% if(page === 'send') { %>active<% } %>">><a href="/my/send">发起背调</a></dd>
+        <dd class="<% if(page === 'receive') { %>active<% } %>">><a href="/my/receive">收到背调</a><i class="point">3</i></dd>
         <dd class="<% if(page === 'orderList') { %>active<% } %>">><a href="/my/orderList">背调记录</a></dd>
-        <dd><a href="#">背调积分</a></dd>
+        <dd class="<% if(page === 'points') { %>active<% } %>">><a href="/my/points">背调积分</a></dd>
       </dl>
     </li>
     <li class="items-wrap last">
       <dl>
         <dt><i class="chainio-icon-set iconfont"></i>设置</dt>
-        <dd><a href="#">账号设置</a></dd>
+        <dd class="<% if(page === 'info') { %>active<% } %>"><a href="/my/info">账号设置</a></dd>
       </dl>
     </li>
   </ul>
