--- a/views/common/nav-mobile.ejs
+++ b/views/common/nav-mobile.ejs
@@ -9,7 +9,7 @@
         <li><a href="#aboutUs">关于我们</a></li>
         <li><a href="#roadmap">区块链图</a></li>
         <li class="last"><a href="#co">合作伙伴</a></li>                
-        <!-- <li class="last pt-0"><a href="/login" class="btn-main btn-login">登录</a></li> -->
+        <li class="last pt-0"><a href="/login" class="btn-main btn-login">登录</a></li>
     </ul>
   </div>
 </div>
