--- a/views/my/orderList.ejs
+++ b/views/my/orderList.ejs
@@ -35,83 +35,83 @@
                 </thead>
                 <tbody>
                   <tr>
-                    <td>张三</td>
+                    <td>沈琪</td>
                     <td>履历核实</td>
-                    <td>2018-01-05</td>
+                    <td>2018-03-13</td>
                     <td>-100</td>
                     <td>等待结果</td>
                     <td>详情</td>
                   </tr>
                   <tr>
-                    <td>张三</td>
+                    <td>王一俊</td>
                     <td>履历核实</td>
-                    <td>2018-01-05</td>
+                    <td>2018-03-12</td>
+                    <td>-100</td>
+                    <td>等待回复</td>
+                    <td>详情</td>
+                  </tr>
+                  <tr>
+                    <td>颜丹晨</td>
+                    <td>履历核实</td>
+                    <td>2018-03-11</td>
                     <td>-100</td>
                     <td>等待结果</td>
                     <td>详情</td>
                   </tr>
                   <tr>
-                    <td>张三</td>
+                    <td>孔蕾蕾</td>
                     <td>履历核实</td>
-                    <td>2018-01-05</td>
+                    <td>2018-03-11</td>
                     <td>-100</td>
                     <td>等待结果</td>
                     <td>详情</td>
                   </tr>
                   <tr>
-                    <td>张三</td>
+                    <td>汪一池</td>
                     <td>履历核实</td>
-                    <td>2018-01-05</td>
+                    <td>2018-02-27</td>
+                    <td>-100</td>
+                    <td>等待回复</td>
+                    <td>详情</td>
+                  </tr>
+                  <tr>
+                    <td>苏行进</td>
+                    <td>履历核实</td>
+                    <td>2018-02-25</td>
                     <td>-100</td>
                     <td>等待结果</td>
                     <td>详情</td>
                   </tr>
                   <tr>
-                    <td>张三</td>
+                    <td>林高真</td>
                     <td>履历核实</td>
-                    <td>2018-01-05</td>
+                    <td>2018-02-17</td>
+                    <td>-100</td>
+                    <td>等待核实</td>
+                    <td>详情</td>
+                  </tr>
+                  <tr>
+                    <td>杨红</td>
+                    <td>履历核实</td>
+                    <td>2018-02-14</td>
                     <td>-100</td>
                     <td>等待结果</td>
                     <td>详情</td>
                   </tr>
                   <tr>
-                    <td>张三</td>
+                    <td>谢俊良</td>
                     <td>履历核实</td>
-                    <td>2018-01-05</td>
+                    <td>2018-02-13</td>
                     <td>-100</td>
                     <td>等待结果</td>
                     <td>详情</td>
                   </tr>
                   <tr>
-                    <td>张三</td>
+                    <td>朱玲玲</td>
                     <td>履历核实</td>
-                    <td>2018-01-05</td>
+                    <td>2018-02-10</td>
                     <td>-100</td>
-                    <td>等待结果</td>
-                    <td>详情</td>
-                  </tr>
-                  <tr>
-                    <td>张三</td>
-                    <td>履历核实</td>
-                    <td>2018-01-05</td>
-                    <td>-100</td>
-                    <td>等待结果</td>
-                    <td>详情</td>
-                  </tr>
-                  <tr>
-                    <td>张三</td>
-                    <td>履历核实</td>
-                    <td>2018-01-05</td>
-                    <td>-100</td>
-                    <td>等待结果</td>
-                    <td>详情</td>
-                  </tr>
-                  <tr>
-                    <td>张三</td>
-                    <td>履历核实</td>
-                    <td>2018-01-05</td>
-                    <td>-100</td>
-                    <td>等待结果</td>
+                    <td>等待回复</td>
                     <td>详情</td>
                   </tr>
                 </tbody>
