--- a/public/src/less/my/orderList.less
+++ b/public/src/less/my/orderList.less
@@ -1,5 +1,6 @@
 @import './../common/base.less';
 @import './../common/my-common.less';
+@import './../common/page.less';
 
 body,html {
   background: #f6f6f6;
@@ -76,68 +77,6 @@ body,html {
 							text-align: left;
 						}
 					}
-				}
-			}
-		}
-
-		.list-page {
-			font-size: 0;
-			margin-top: 34px;
-			text-align: right;
-			height: 34px;
-			vertical-align: middle;
-			.text {
-				display: inline-block;
-				margin: 0 20px;
-				line-height: 34px;
-				font-size: 14px;
-				vertical-align: top;
-			}
-			.input-field {
-				font-size: 14px;
-				display: inline-block;
-				border: 1px solid #E7E7EB;
-				width: 56px;
-				height: 34px;
-				line-height: normal;
-				vertical-align: middle;
-				outline: 0;
-				padding: 0 8px;
-				margin-left: 14px;
-			}
-			a {
-				display: inline-block;
-				font-size: 14px;
-				color: #3E4D55;
-				&.pre, &.next {
-					position: relative;
-					width: 34px;
-					height: 34px;
-					border: 1px solid #E7E7EB;
-					i {
-						position: absolute;
-						top: 3px;
-						left: 3px;
-						display: block;
-						color: #D5D5D5;
-						top: 8px;
-    				left: 7px;
-					}
-				}
-				&.next {
-					i {
-						left: 9px;
-					}
-				}
-				&.btn-jump {
-					border: 1px solid #E7E7EB;
-					width: 50px;
-					height: 34px;
-					line-height: 32px;
-					vertical-align: middle;
-					text-align: center;
-					color: #120808;
-					margin-left: 14px;
 				}
 			}
 		}
