--- a/views/my/receive.ejs
+++ b/views/my/receive.ejs
@@ -20,7 +20,7 @@
               <td class="c-name">深圳腾讯计算机网络有限公司</td>
               <td class="what">向您公司发起了一段背调核实内容(履历核实)</td>
               <td calss="date">2018.03.15</td>
-              <td class="funcs"><a href="javascript:;" clas="btn-detail">详情</a><a href="javascript:;" clas="btn-reply">回复</a><a href="javascript:;" clas="btn-notreply">不回复</a></td>
+              <td class="funcs"><a href="/my/receive/info/10001" clas="btn-detail" target="_blank">详情</a><a href="javascript:;" clas="btn-reply">回复</a><a href="javascript:;" clas="btn-notreply">不回复</a></td>
             </tr>
           </table>
           <table cellspacing="0" cellpadding="0" width="100%">
@@ -28,7 +28,7 @@
               <td class="c-name">深圳腾讯计算机网络有限公司</td>
               <td class="what">向您公司发起了一段背调核实内容(履历核实)</td>
               <td calss="date">2018.03.15</td>
-              <td class="funcs"><a href="javascript:;" clas="btn-detail">详情</a><a href="javascript:;" clas="btn-reply">回复</a><a href="javascript:;" clas="btn-notreply">不回复</a></td>
+              <td class="funcs"><a href="/my/receive/info/10002" clas="btn-detail" target="_blank">详情</a><a href="javascript:;" clas="btn-reply">回复</a><a href="javascript:;" clas="btn-notreply">不回复</a></td>
             </tr>
           </table>
           <table cellspacing="0" cellpadding="0" width="100%">
@@ -36,7 +36,7 @@
               <td class="c-name">深圳腾讯计算机网络有限公司</td>
               <td class="what">向您公司发起了一段背调核实内容(履历核实)</td>
               <td calss="date">2018.03.15</td>
-              <td class="funcs"><a href="javascript:;" clas="btn-detail">详情</a><a href="javascript:;" clas="btn-reply">回复</a><a href="javascript:;" clas="btn-notreply">不回复</a></td>
+              <td class="funcs"><a href="/my/receive/info/10003" clas="btn-detail" target="_blank">详情</a><a href="javascript:;" clas="btn-reply">回复</a><a href="javascript:;" clas="btn-notreply">不回复</a></td>
             </tr>
           </table>
         </div>
